# drivel-server

./: .env-dev.yaml  .env.dev  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.CloudRun.md  README.Docker.md  README.md  compose.yaml  justfile  pyproject.toml
.github/workflows/: code_fmt.yml  lint.yml  merge-commits.yml  move_linked_issue.yml  setup-python-env.yml  test.yml
drivel_server/: __init__.py  clients.py  dummy.py  main.py  server.py
drivel_server/adapters/api_clients/: openai_client.py
drivel_server/api/v1/: api.py
drivel_server/api/v1/endpoints/: chat.py  chat_replies.py  chatgpt.py  stt.py  tts.py
drivel_server/core/: config.py  literals.py  security.py
drivel_server/core/use_cases/: openai_processing.py
drivel_server/interfaces/api/routers/: openai_router.py
drivel_server/interfaces/api/schemas/: openai_params.py
drivel_server/schemas/: chat_replies.py  chatgpt.py  stt.py  tts.py
scripts/: deploy.sh
tests/integration/: conftest.py  test_server.py
tests/unit/: test_dummy.py  test_openai_schemas.py  test_server.py  test_tts_schemas.py
